--- a/seg_methods.ipynb
+++ b/seg_methods.ipynb
@@ -34,6 +34,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,29 +53,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from skimage.segmentation import felzenszwalb, mark_boundaries\n",
     "from skimage.data import coffee, astronaut\n",
-    "from skimage.util import img_as_float\n",
-    "\n",
-    "import matplotlib.pyplot as plt"
+    "from skimage.util import img_as_float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x79219096d7d0>"
+       "<matplotlib.image.AxesImage at 0x76dee0d06790>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +171,7 @@
        "         [0.0000, 0.0000, 0.0000]]], dtype=torch.float64, requires_grad=True)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +259,7 @@
        "        [261632, 261633, 261634,  ..., 262141, 262142, 262143]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,26 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from treelib import Tree\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "S = np.array([Tree().create_node(s) for s in np.arange(width * height)]).reshape(width, height)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +286,7 @@
        "        [261631, 262142]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,23 +315,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0.,  ..., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Int = torch.zeros(width * height) # Internal differences "
+    "Int = torch.zeros(width * height) # Internal differences \n",
+    "Int"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loop "
+    "#### Issue: How to do the set operations?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Sparse matrices\n",
+    "\n",
+    "$S$ will be a $(H*W) \\times (H*W)$ matrix. Basically the same idea as a sparse edge matrix. dim = 0 represents the segments $C$, dim = 1 the nodes $V$ that compose the segment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[     0      1      2 ... 262141 262142 262143]\n",
+      " [     0      1      2 ... 262141 262142 262143]] [1. 1. 1. ... 1. 1. 1.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[     0,      1,      2,  ..., 262141, 262142, 262143],\n",
+       "                       [     0,      1,      2,  ..., 262141, 262142, 262143]]),\n",
+       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
+       "       size=(262144, 262144), nnz=262144, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo, requires_grad=True)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices = np.array([np.arange(width*height), np.arange(width*height)], dtype=np.int64)\n",
+    "values  = np.ones(width * height)\n",
+    "print(indices, values)\n",
+    "\n",
+    "Ss = torch.sparse_coo_tensor(indices, values, (width*height, width*height), requires_grad=True)\n",
+    "Ss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge operation of segments $C_i$ and $C_j$ into $C_i$:\n",
+    "1. Select the vector $c_j$ that corresponds to $S[j, :]$\n",
+    "2. $c_i = c_i + c_j$\n",
+    "3. $c_j = c_j - c_j$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[     0,      1,      1,  ..., 262141, 262142, 262143],\n",
+       "                       [     0,      1,      3,  ..., 262141, 262142, 262143]]),\n",
+       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
+       "       size=(262144, 262144), nnz=262145, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo, grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ci_idx, cj_idx = 1, 3\n",
+    "off_idx = ci_idx - cj_idx\n",
+    "\n",
+    "cj = torch.select(Ss, 0, cj_idx)\n",
+    "\n",
+    "cj_indices = cj.indices()\n",
+    "top = torch.concat([torch.ones_like(cj_indices).flatten() * ci_idx, torch.ones_like(cj_indices).flatten() * cj_idx])\n",
+    "bottom = torch.concat([cj_indices.flatten(), cj_indices.flatten()])\n",
+    "indices = torch.stack([top, bottom])\n",
+    "\n",
+    "cj_values = cj.values()\n",
+    "values = torch.concat([cj_values, -1 * cj_values])\n",
+    "\n",
+    "off = torch.sparse_coo_tensor(indices, values, (width*height, width*height))\n",
+    "off\n",
+    "\n",
+    "Ss = Ss + off\n",
+    "Ss\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loop "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +457,7 @@
        "tensor(300., requires_grad=True)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,24 +469,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([     0,      1,      2,  ..., 262141, 262142, 262143])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "S = S.flatten()"
+    "S = S.flatten()\n",
+    "S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(251260) tensor(251771)\n",
-      "tensor(251260) tensor(251771)\n",
+      "tensor(208768) tensor(208767)\n",
+      "tensor(208768) tensor(208767)\n",
       "tensor(300., grad_fn=<AddBackward0>) tensor(300., grad_fn=<AddBackward0>)\n",
       "tensor(0., dtype=torch.float64, grad_fn=<SelectBackward0>) tensor(300., grad_fn=<MinimumBackward0>)\n"
      ]
