--- a/seg_methods.ipynb
+++ b/seg_methods.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x76dee0d06790>"
+       "<matplotlib.image.AxesImage at 0x78f31f6f7710>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "         [0.0000, 0.0000, 0.0000]]], dtype=torch.float64, requires_grad=True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,23 +210,24 @@
     "\n",
     "down_cost   = torch.sqrt(torch.sum((img_tensor[1:, :, :] - img_tensor[:height-1, :, :]) ** 2, dim=-1))\n",
     "right_cost  = torch.sqrt(torch.sum((img_tensor[:, 1:, :] - img_tensor[:, :width-1, :]) ** 2, dim=-1))\n",
-    "dright_cost = torch.sqrt(torch.sum((img_tensor[1:, 1:, :] - img_tensor[:height-1, :width-1, :]) ** 2, dim=-1))\n",
-    "uright_cost = torch.sqrt(torch.sum((img_tensor[1:, :width-1, :] - img_tensor[:height-1, 1:, :]) ** 2, dim=-1))\n",
-    "costs = torch.hstack([right_cost.ravel(), down_cost.ravel(), dright_cost.ravel(), uright_cost.ravel()])"
+    "# dright_cost = torch.sqrt(torch.sum((img_tensor[1:, 1:, :] - img_tensor[:height-1, :width-1, :]) ** 2, dim=-1))\n",
+    "# uright_cost = torch.sqrt(torch.sum((img_tensor[1:, :width-1, :] - img_tensor[:height-1, 1:, :]) ** 2, dim=-1))\n",
+    "# costs = torch.hstack([right_cost.ravel(), down_cost.ravel(), dright_cost.ravel(), uright_cost.ravel()])\n",
+    "costs = torch.hstack([right_cost.ravel(), down_cost.ravel()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.2686, 0.2667, 0.0474,  ..., 0.4142, 0.0068, 0.0068],\n",
+      "tensor([0.2686, 0.2667, 0.0474,  ..., 0.0039, 0.0000, 0.0000],\n",
       "       dtype=torch.float64, grad_fn=<CatBackward0>)\n",
-      "torch.Size([1045506])\n"
+      "torch.Size([523264])\n"
      ]
     }
    ],
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +260,7 @@
        "        [261632, 261633, 261634,  ..., 262141, 262142, 262143]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -281,12 +282,12 @@
        "        [     2,      1],\n",
        "        [     3,      2],\n",
        "        ...,\n",
-       "        [261629, 262140],\n",
-       "        [261630, 262141],\n",
-       "        [261631, 262142]])"
+       "        [262141, 261629],\n",
+       "        [262142, 261630],\n",
+       "        [262143, 261631]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,15 +295,16 @@
    "source": [
     "down_edges   = torch.column_stack((S[1:, :].ravel(), S[:height-1, :].ravel()))\n",
     "right_edges  = torch.column_stack((S[:, 1:].ravel(), S[:, :width-1].ravel()))\n",
-    "dright_edges = torch.column_stack((S[1:, 1:].ravel(), S[:height-1, :width-1].ravel()))\n",
-    "uright_edges = torch.column_stack((S[:height-1, 1:].ravel(), S[1:, :width-1].ravel()))\n",
-    "edges = torch.vstack((right_edges, down_edges, dright_edges, uright_edges))\n",
+    "# dright_edges = torch.column_stack((S[1:, 1:].ravel(), S[:height-1, :width-1].ravel()))\n",
+    "# uright_edges = torch.column_stack((S[:height-1, 1:].ravel(), S[1:, :width-1].ravel()))\n",
+    "# edges = torch.vstack((right_edges, down_edges, dright_edges, uright_edges))\n",
+    "edges = torch.vstack((right_edges, down_edges))\n",
     "edges"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +326,7 @@
        "tensor([0., 0., 0.,  ..., 0., 0., 0.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,12 +349,12 @@
    "source": [
     "1. Sparse matrices\n",
     "\n",
-    "$S$ will be a $(H*W) \\times (H*W)$ matrix. Basically the same idea as a sparse edge matrix. dim = 0 represents the segments $C$, dim = 1 the nodes $V$ that compose the segment."
+    "$S$ will be a $(H*W) \\times (H*W)$ matrix. Basically the same idea as a sparse edge matrix. dim = 1 represents the segments $C$, dim = 0 the nodes $V$ that compose the segment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +375,7 @@
        "       layout=torch.sparse_coo, requires_grad=True)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,44 +401,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1., -1.], dtype=torch.float64)\n",
+      "tensor(indices=tensor([[2, 2],\n",
+      "                       [0, 2]]),\n",
+      "       values=tensor([ 1., -1.]),\n",
+      "       size=(262144, 262144), nnz=2, dtype=torch.float64,\n",
+      "       layout=torch.sparse_coo)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[     0,      1,      2,  ..., 262142, 262143, 262143],\n",
+       "                       [     0,      1,      0,  ..., 262142, 261118, 262143]]),\n",
+       "       values=tensor([1., 1., 1.,  ..., 1., 1., 0.]),\n",
+       "       size=(262144, 262144), nnz=394527, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ci_idx, cj_idx = 0, 2\n",
+    "off_idx = ci_idx - cj_idx\n",
+    "\n",
+    "cj = torch.select(Ss, 1, cj_idx).coalesce()\n",
+    "\n",
+    "cj_indices = cj.indices()\n",
+    "top = torch.concat([torch.ones_like(cj_indices).flatten() * ci_idx, torch.ones_like(cj_indices).flatten() * cj_idx])\n",
+    "bottom = torch.concat([cj_indices.flatten(), cj_indices.flatten()])\n",
+    "indices = torch.stack([bottom, top])\n",
+    "\n",
+    "cj_values = cj.values()\n",
+    "values = torch.concat([cj_values, -1 * cj_values])\n",
+    "print(values)\n",
+    "\n",
+    "off = torch.sparse_coo_tensor(indices, values, (width*height, width*height))\n",
+    "print(off)\n",
+    "\n",
+    "Ss = Ss + off\n",
+    "Ss = Ss.coalesce()\n",
+    "Ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([262144, 262144])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ss.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_segments(ci, cj, Ss):\n",
+    "    cj_segment = torch.select(Ss, 1, cj).coalesce()\n",
+    "\n",
+    "    cj_indices = cj_segment.indices().flatten()\n",
+    "    indices_v = torch.concat([cj_indices, cj_indices]) # nodes\n",
+    "    indices_c = torch.concat([ci * torch.ones_like(cj_indices), cj * torch.ones_like(cj_indices)]) # segments\n",
+    "    indices = torch.stack([indices_v, indices_c])\n",
+    "\n",
+    "    cj_values = cj_segment.values()\n",
+    "    values = torch.concat([cj_values, -1*cj_values])\n",
+    "\n",
+    "    offset = torch.sparse_coo_tensor(indices, values, Ss.size())\n",
+    "    return Ss + offset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding the segment $C_i$ of the node $v_i$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(indices=tensor([[1]]),\n",
+      "       values=tensor([1.]),\n",
+      "       size=(262144,), nnz=1, dtype=torch.float64, layout=torch.sparse_coo)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vi_idx = 1\n",
+    "vi = torch.select(Ss, 0, vi_idx)\n",
+    "print(vi)\n",
+    "vi = vi.coalesce()\n",
+    "ci = torch.argmin(vi.indices().flatten())\n",
+    "ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices = Ss.coalesce().indices()\n",
+    "vi = 2\n",
+    "vi_indices = indices[1, torch.argwhere(indices[0] == vi)].min()\n",
+    "vi_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_segment(vi, Ss):\n",
+    "    indices = Ss.coalesce().indices()\n",
+    "    return indices[1, torch.argwhere(indices[0] == vi)].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_segment(vi, Ss):\n",
+    "    vi_segment = torch.select(Ss, 0, vi).coalesce()\n",
+    "    ci = vi_segment.indices().flatten()[0]\n",
+    "    return ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_segment(vi, Ss):\n",
+    "    return 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the segmentation $S$ as a $H \\times W$ vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  0,  2,  0,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "        18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35,\n",
+       "        36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53,\n",
+       "        54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,\n",
+       "        72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89,\n",
+       "        90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ss = Ss.coalesce()\n",
+    "Ss.indices()[:100, :100]\n",
+    "\n",
+    "# S = indices[torch.argwhere(Ss.values())]\n",
+    "indices = Ss.indices()\n",
+    "C = indices[1][torch.argwhere(Ss.values())].flatten()\n",
+    "C[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor(indices=tensor([[     0,      1,      1,  ..., 262141, 262142, 262143],\n",
-       "                       [     0,      1,      3,  ..., 262141, 262142, 262143]]),\n",
-       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
-       "       size=(262144, 262144), nnz=262145, dtype=torch.float64,\n",
-       "       layout=torch.sparse_coo, grad_fn=<AddBackward0>)"
+       "                       [     0,      0,      1,  ..., 262141, 262142, 262143]]),\n",
+       "       values=tensor([1., 1., 0.,  ..., 1., 1., 1.]),\n",
+       "       size=(262144, 262144), nnz=262147, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo, grad_fn=<CoalesceBackward0>)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ci_idx, cj_idx = 1, 3\n",
-    "off_idx = ci_idx - cj_idx\n",
-    "\n",
-    "cj = torch.select(Ss, 0, cj_idx)\n",
-    "\n",
-    "cj_indices = cj.indices()\n",
-    "top = torch.concat([torch.ones_like(cj_indices).flatten() * ci_idx, torch.ones_like(cj_indices).flatten() * cj_idx])\n",
-    "bottom = torch.concat([cj_indices.flatten(), cj_indices.flatten()])\n",
-    "indices = torch.stack([top, bottom])\n",
-    "\n",
-    "cj_values = cj.values()\n",
-    "values = torch.concat([cj_values, -1 * cj_values])\n",
-    "\n",
-    "off = torch.sparse_coo_tensor(indices, values, (width*height, width*height))\n",
-    "off\n",
-    "\n",
-    "Ss = Ss + off\n",
-    "Ss\n",
-    "\n"
+    "Ss"
    ]
   },
   {
@@ -448,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +672,7 @@
        "tensor(300., requires_grad=True)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,55 +684,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([     0,      1,      2,  ..., 262141, 262142, 262143])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S = S.flatten()\n",
-    "S"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(208768) tensor(208767)\n",
-      "tensor(208768) tensor(208767)\n",
-      "tensor(300., grad_fn=<AddBackward0>) tensor(300., grad_fn=<AddBackward0>)\n",
-      "tensor(0., dtype=torch.float64, grad_fn=<SelectBackward0>) tensor(300., grad_fn=<MinimumBackward0>)\n"
+      "[[     0      1      2 ... 262141 262142 262143]\n",
+      " [     0      1      2 ... 262141 262142 262143]] [1. 1. 1. ... 1. 1. 1.]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[     0,      1,      2,  ..., 262141, 262142, 262143],\n",
+       "                       [     0,      1,      2,  ..., 262141, 262142, 262143]]),\n",
+       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
+       "       size=(262144, 262144), nnz=262144, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "edge_idx, cost_idx = 0, 0 \n",
-    "vi, vj = edges[edge_idx]\n",
-    "print(vi, vj)\n",
+    "indices = np.array([np.arange(width*height), np.arange(width*height)], dtype=np.int64)\n",
+    "values  = np.ones(width * height)\n",
+    "print(indices, values)\n",
     "\n",
-    "ci, cj = S[vi], S[vj]\n",
-    "print(ci, cj)\n",
+    "Ss = torch.sparse_coo_tensor(indices, values, (width*height, width*height))\n",
+    "Ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "int0 = Int[ci] + scale / segment_size[ci]\n",
-    "int1 = Int[cj] + scale / segment_size[cj]\n",
-    "print(int0, int1)\n",
+    "edge_idx, cost_idx = 0, 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with torch.no_grad():\n",
+    "# for i in range(len(costs)):\n",
+    "for i in range(1000):\n",
+    "    vi, vj = edges[i]\n",
+    "    # print(vi, vj)\n",
     "\n",
-    "# if costs[cost_idx] < torch.min(int0, int1):\n",
-    "print(costs[cost_idx], torch.min(int0, int1))"
+    "    # ci, cj = get_segment(vi, Ss), get_segment(vj, Ss)\n",
+    "    ci, cj = 0, 1\n",
+    "    # print(ci, cj)\n",
+    "\n",
+    "    int0 = Int[ci] + scale / segment_size[ci]\n",
+    "    int1 = Int[cj] + scale / segment_size[cj]\n",
+    "    # print(int0, int1)\n",
+    "\n",
+    "    # print(costs[i], torch.min(int0, int1))\n",
+    "    # if costs[i] < torch.min(int0, int1):\n",
+    "\n",
+    "    Ss = merge_segments(ci, cj, Ss)\n",
+    "    # (print(Ss_new))\n",
+    "\n",
+    "    segment_size[ci] += segment_size[cj]\n",
+    "    # print(segment_size[ci])\n",
+    "\n",
+    "    Int[ci] = costs[i]\n",
+    "        # print(Int[ci])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262144"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "width * height"
    ]
   }
  ],
