slightly less slow method for get_segment()

--- a/seg_methods.ipynb
+++ b/seg_methods.ipynb
@@ -561,24 +561,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_segment(vi, Ss):\n",
-    "    indices = Ss.coalesce().indices()\n",
-    "    return indices[1, torch.argwhere(indices[0] == vi)].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_segment(vi, Ss):\n",
     "    vi_segment = torch.select(Ss, 0, vi).coalesce()\n",
-    "    ci = vi_segment.indices().flatten()[0]\n",
+    "    ci = vi_segment.indices().flatten().min()\n",
     "    return ci"
    ]
   },
@@ -731,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,8 +730,8 @@
     "    vi, vj = edges[i]\n",
     "    # print(vi, vj)\n",
     "\n",
-    "    # ci, cj = get_segment(vi, Ss), get_segment(vj, Ss)\n",
-    "    ci, cj = 0, 1\n",
+    "    ci, cj = get_segment(vi, Ss), get_segment(vj, Ss)\n",
+    "    # ci, cj = 0, 1\n",
     "    # print(ci, cj)\n",
     "\n",
     "    int0 = Int[ci] + scale / segment_size[ci]\n",
