--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -70,7 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x78f31f6f7710>"
+       "<matplotlib.image.AxesImage at 0x768206e33910>"
       ]
      },
      "execution_count": 5,
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "        [261632, 261633, 261634,  ..., 262141, 262142, 262143]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "        [262143, 261631]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "tensor([0., 0., 0.,  ..., 0., 0., 0.])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "       layout=torch.sparse_coo, requires_grad=True)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,32 +401,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 1., -1.], dtype=torch.float64)\n",
+      "tensor([ 1., -1.], dtype=torch.float64, grad_fn=<CatBackward0>)\n",
       "tensor(indices=tensor([[2, 2],\n",
       "                       [0, 2]]),\n",
       "       values=tensor([ 1., -1.]),\n",
       "       size=(262144, 262144), nnz=2, dtype=torch.float64,\n",
-      "       layout=torch.sparse_coo)\n"
+      "       layout=torch.sparse_coo,\n",
+      "       grad_fn=<SparseCooTensorWithDimsAndTensorsBackward0>)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor(indices=tensor([[     0,      1,      2,  ..., 262142, 262143, 262143],\n",
-       "                       [     0,      1,      0,  ..., 262142, 261118, 262143]]),\n",
-       "       values=tensor([1., 1., 1.,  ..., 1., 1., 0.]),\n",
-       "       size=(262144, 262144), nnz=394527, dtype=torch.float64,\n",
-       "       layout=torch.sparse_coo)"
+       "tensor(indices=tensor([[     0,      1,      2,  ..., 262141, 262142, 262143],\n",
+       "                       [     0,      1,      0,  ..., 262141, 262142, 262143]]),\n",
+       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
+       "       size=(262144, 262144), nnz=262145, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo, grad_fn=<CoalesceBackward0>)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +514,8 @@
      "text": [
       "tensor(indices=tensor([[1]]),\n",
       "       values=tensor([1.]),\n",
-      "       size=(262144,), nnz=1, dtype=torch.float64, layout=torch.sparse_coo)\n"
+      "       size=(262144,), nnz=1, dtype=torch.float64, layout=torch.sparse_coo,\n",
+      "       grad_fn=<SelectBackward0>)\n"
      ]
     },
     {
@@ -522,7 +524,7 @@
        "tensor(0)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +549,7 @@
        "tensor(0)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,13 +592,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0,  0,  2,  0,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "tensor([ 0,  1,  0,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
        "        18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35,\n",
        "        36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53,\n",
        "        54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,\n",
@@ -604,7 +606,7 @@
        "        90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,20 +623,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(indices=tensor([[     0,      1,      1,  ..., 262141, 262142, 262143],\n",
-       "                       [     0,      0,      1,  ..., 262141, 262142, 262143]]),\n",
-       "       values=tensor([1., 1., 0.,  ..., 1., 1., 1.]),\n",
-       "       size=(262144, 262144), nnz=262147, dtype=torch.float64,\n",
+       "tensor(indices=tensor([[     0,      1,      2,  ..., 262141, 262142, 262143],\n",
+       "                       [     0,      1,      0,  ..., 262141, 262142, 262143]]),\n",
+       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
+       "       size=(262144, 262144), nnz=262145, dtype=torch.float64,\n",
        "       layout=torch.sparse_coo, grad_fn=<CoalesceBackward0>)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +663,7 @@
        "tensor(300., requires_grad=True)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +696,7 @@
        "       layout=torch.sparse_coo)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
