describing the S0 issue

--- a/slic.ipynb
+++ b/slic.ipynb
@@ -10,9 +10,25 @@
     "\n",
     "1. Compute initial superpixel center in regular grid cells $S^0_{m \\times k} = I(F)$\n",
     "2. For each iteration $t$ in $[1,...,v]$:\n",
-    "3. : Compute associations for each pixel $p$ and surrounding superpixel $i$: $Q^t_{pi}=e^{-||F_p - S_i^{t-1}||^2}$\n",
-    "4. : Compute new superpixel centers $S^t_i = \\frac{1}{Z^t_i}\\sum^n_{p=1}Q^t_{pi}F_p$, where $Z^t_i = \\sum_p Q^t_{pi}$\n",
+    "3. | Compute associations for each pixel $p$ and surrounding superpixel $i$: $Q^t_{pi}=e^{-||F_p - S_i^{t-1}||^2}$\n",
+    "4. | Compute new superpixel centers $S^t_i = \\frac{1}{Z^t_i}\\sum^n_{p=1}Q^t_{pi}F_p$, where $Z^t_i = \\sum_p Q^t_{pi}$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Issue: How to compute $S^0$?\n",
+    "\n",
+    "After the first segmentation, how to define what is a regular distribution of centroids in a graph? How to do graph sampling?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementations"
    ]
   },
   {
@@ -64,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## skimage implementation\n",
+    "### skimage implementation\n",
     "\n",
     "Not differentiable because of hard pixel-superpixel associations!"
    ]
@@ -113,14 +129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Differentiable version with pytorch ...."
+    "### Differentiable version with pytorch ...."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Computing $S^0$ and $Q^0$"
+    "#### Computing $S^0$ and $Q^0$"
    ]
   },
   {
