notes on making the algorithm differentiable

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -30,7 +30,76 @@
     "\n",
     "And, \n",
     "$$\\tau(C) = \\frac{k}{|C|}$$\n",
-    "Where $k$ sets a scale of observation, in practice (and is actually called *scale* in skimage). However it is not a minimum component size.\n"
+    "Where $k$ sets a scale of observation, in practice (and is actually called *scale* in skimage). However it is not a minimum component size.\n",
+    "\n",
+    "The algorithm goes:\n",
+    "\n",
+    "0. Sort $E$ into $\\pi = (o_1,\\dots,o_m)$ by non-decreasing order\n",
+    "1. $S^0$ where each node $v_i$ is in the component $C_i$\n",
+    "2. For $q \\in [1,\\dots,m]$, compute $S^q$ from $S^{q-1}$:\n",
+    "    1. With $o_q = (v_i, v_j)$, get $C_i^{q-1}$ so that $v_i \\in C_i^{q-1}$ and $C_i^{q-1}$ so that $v_j \\in C_j^{q-1}$\n",
+    "    2. If $C_i^{q-1} = C_j^{q-1}$, continue\n",
+    "    3. If $w(o_q) \\leq MInt(C_i^{q-1},C_j^{q-1})$, $S^q = C_i \\cup_{S^{q-1}} C_j$, else $S^q = S^{q-1}$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes on making it differentiable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set operations that will be required:\n",
+    "- merge($C_i, C_j, S^{q-1}$) $\\rightarrow S^q$\n",
+    "- get_component($v_i$) $\\rightarrow C_i, v_i \\in C_i$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changing the algorithm to\n",
+    "\n",
+    "0. $O = E$ \n",
+    "1. $S^0$ where each node $v_i$ is in the component $C_i$\n",
+    "2. For $q \\in [1,\\dots,m]$, compute $S^q$ from $S^{q-1}$: \n",
+    "\n",
+    "    0. $o_q = \\argmax_{o \\in O} w(o)$, $O \\leftarrow O - o_q$\n",
+    "    1. With $o_q = (v_i, v_j)$, get $C_i^{q-1}$ so that $v_i \\in C_i^{q-1}$ and $C_i^{q-1}$ so that $v_j \\in C_j^{q-1}$\n",
+    "    2. If $C_i^{q-1} = C_j^{q-1}$, continue\n",
+    "    3. If $w(o_q) \\leq MInt(C_i^{q-1},C_j^{q-1})$, $S^q = C_i \\cup_{S^{q-1}} C_j$, else $S^q = S^{q-1}$\n",
+    "\n",
+    "Can make the sorting differentiable w/ the softmax relaxation of argmax\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the probability of $C_i$ and $C_j$ belonging to the same component instead of choosing whether to merge or not based on the $w(o_q) \\leq MInt(C_i^{q-1},C_j^{q-1})$ inequality.\n",
+    "\n",
+    "Option: \n",
+    "$$ w(o_q) \\leq MInt(C_i^{q-1},C_j^{q-1}) $$\n",
+    "$$\\frac{w(o_q)}{w(o_q)} \\leq \\frac{MInt(C_i^{q-1},C_j^{q-1})}{w(o_q)}$$\n",
+    "$$1 \\leq \\frac{MInt(C_i^{q-1},C_j^{q-1})}{w(o_q)}$$\n",
+    "$$\\frac{MInt(C_i^{q-1},C_j^{q-1})}{w(o_q)} \\geq 1$$\n",
+    "$$P(C_i^{q-1},C_j^{q-1} | S^{q-1}) = sigmoid(\\frac{MInt(C_i^{q-1},C_j^{q-1})}{w(o_q)}-1)$$\n",
+    "\n",
+    "If the scale factor is a learneable paramenter, or even if $\\tau(C_i)$ is a learnable function maybe it can learn to compensate for the sigmoid?\n",
+    "\n",
+    "If so, merge($C_i, C_j, S^{q-1}$) will have to account for the probability "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementations "
    ]
   },
   {
