advances in prob matrices :(

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "metadata": {}
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -203,10 +203,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7185d8ef0ee0>"
+       "<matplotlib.image.AxesImage at 0x74dc5c8ff490>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,14 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Issue: How to do the set operations?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 1. Sparse matrices\n",
+    "#### 1. Sparse matrices\n",
     "\n",
     "$S$ will be a $(H*W) \\times (H*W)$ matrix. Basically the same idea as a sparse edge matrix. dim = 1 represents the segments $C$, dim = 0 the nodes $V$ that compose the segment."
    ]
@@ -992,7 +985,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2. Normal matrices"
+    "#### 2. Normal matrices"
    ]
   },
   {
@@ -1029,12 +1022,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3. Probabilistic sparse matrices"
+    "#### 3. Probabilistic sparse matrices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1046,16 +1039,21 @@
     }
    ],
    "source": [
-    "print(g)\n",
+    "device = 'cuda'\n",
+    "\n",
+    "g = g.to(device=device) \n",
+    "\n",
     "m = g.edge_index.shape[-1]\n",
-    "n = g.x.shape[0]"
+    "n = g.x.shape[0]\n",
+    "\n",
+    "print(g)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preamble:\n",
+    "##### Preamble:\n",
     "- Create $S^0$\n",
     "- Compute edge weights \n",
     "- Create edge queue "
@@ -1063,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1072,11 +1070,11 @@
        "tensor(indices=tensor([[    0,     1,     2,  ..., 16381, 16382, 16383],\n",
        "                       [    0,     1,     2,  ..., 16381, 16382, 16383]]),\n",
        "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
-       "       size=(16384, 16384), nnz=16384, dtype=torch.float64,\n",
+       "       device='cuda:0', size=(16384, 16384), nnz=16384, dtype=torch.float64,\n",
        "       layout=torch.sparse_coo)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,24 +1082,24 @@
    "source": [
     "indices = np.array([np.arange(n), np.arange(n)], dtype=np.int64)\n",
     "values  = np.ones(n)\n",
-    "S = torch.sparse_coo_tensor(indices, values, (n, n))\n",
+    "S = torch.sparse_coo_tensor(indices, values, (n, n), device=device)\n",
     "S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([0.0466, 0.2163, 0.7224,  ..., 0.0505, 0.1040, 0.1677],\n",
+       "(tensor([0.0466, 0.2163, 0.7224,  ..., 0.0505, 0.1040, 0.1677], device='cuda:0',\n",
        "        dtype=torch.float64),\n",
        " torch.Size([32512]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,16 +1115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([31589, 27516, 27515,  ..., 27235, 27236, 27234])"
+       "tensor([ 7851,  9136,  9263,  ..., 27235, 27236, 27234], device='cuda:0')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,11 +1136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "I = torch.zeros(n)\n",
+    "I = torch.zeros(n, device=device)\n",
     "segment_size = torch.ones_like(I)"
    ]
   },
@@ -1157,44 +1155,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finding the segment $C_i$ of the node $v_i$ "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Not differential version that returns a scalar index"
+    "Finding the possible segments to which the node $v_i$ belongs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_segment(vi, S):\n",
+    "def get_segments(vi, S):\n",
     "    vis = S[vi].coalesce()\n",
-    "    return vis.indices().flatten()[torch.argmax(vis.values())]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Differentiable version that returns a one-hot-ish representation (sparse) i.e.: probability of belonging to each segment "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_segment_dif(vi, S):\n",
-    "    vis = S[vi].coalesce()\n",
-    "    # return torch.sparse.softmax(vis, dim=0)\n",
     "    return vis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16384])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_segments(9, S)"
    ]
   },
   {
@@ -1287,19 +1279,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the merge probability"
+    "##### Calculate the merge probability\n",
+    "\n",
+    "With $o_q = (v_i, v_j)$, we want the merge probability of each segment to which $v_i$ may belong and every segment to which $v_j$ may belong\n",
+    "\n",
+    "$ P(V_i, V_j | S) \\in R^{N \\times N}$, where $V_i, V_j \\in R^N$, $S \\in R^{N \\times N}$, $N = |V|$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tau(c, k=300):\n",
-    "    return k/segment_size[c]\n",
+    "def tau(Vi, k=300):\n",
+    "    return pow(Vi * segment_size, -1)*k\n",
     "\n",
-    "def MInt(ci, cj):\n",
+    "def MInt(Vi, Vj):\n",
     "    return min(I[ci] + tau(ci), I[cj] + tau(cj))\n",
     "\n",
     "def merge_probability(ci, cj, w, temperature=1):\n",
@@ -1308,31 +1304,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor(15461),\n",
-       " tensor(15333),\n",
-       " tensor(0.0078, dtype=torch.float64),\n",
-       " tensor(1., dtype=torch.float64))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2., 2., 2.,  ..., 2., 2., 2.], device='cuda:0', dtype=torch.float64,\n",
+      "       requires_grad=True) None\n"
+     ]
     }
    ],
    "source": [
     "vi, vj = g.edge_index[:,edge_queue[0]]\n",
     "w = edge_weights[edge_queue[0]]\n",
     "\n",
-    "ci, cj = get_segment(vi, S), get_segment(vj, S)\n",
-    "p = merge_probability(ci, cj, w)\n",
+    "del Vi\n",
+    "Vi = get_segments(vi, S).to_dense()\n",
+    "Vi = Vi + 2\n",
+    "print(Vi, Vi.grad_fn)\n",
+    "# tau(Vi)\n",
+    "# ci, cj = get_segment(vi, S), get_segment(vj, S)\n",
+    "# p = merge_probability(ci, cj, w)\n",
     "\n",
-    "ci, cj, w, p"
+    "# ci, cj, w, p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([3., 4., 5.], grad_fn=<AddBackward0>) <AddBackward0 object at 0x74dc5054bee0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = torch.tensor([1., 2., 3.], requires_grad=True)\n",
+    "print(A.grad_fn)\n",
+    "A = A + 2\n",
+    "print(A, A.grad_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [2, 4, 6],\n",
+       "       [3, 6, 9]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2, 3]]).T\n",
+    "B = A.T\n",
+    "\n",
+    "A @ B"
    ]
   },
   {
@@ -1506,7 +1548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 4. Graph like "
+    "#### 4. Graph like "
    ]
   },
   {
@@ -1579,7 +1621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
