merge_probability signature

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -1322,8 +1322,12 @@
     "    smu = -(vi_val + vj_val + torch.sqrt((vi_val - vj_val)**2 + mu**2))/2 \n",
     "    return smu \n",
     "\n",
-    "def merge_probability(ci, cj, w, temperature=1):\n",
-    "    return torch.sigmoid((MInt(ci, cj)/w - 1) * temperature)"
+    "def merge_probability(vi_idx:torch.LongTensor, vi_val:torch.Tensor,\n",
+    "                      vj_idx:torch.LongTensor, vj_val:torch.Tensor, \n",
+    "                      w, temperature=1):\n",
+    "\n",
+    "    p_val = torch.sigmoid((MInt(vi_idx, vi_val, vj_idx, vj_val)/w - 1) * temperature)\n",
+    "    p_idx = "
    ]
   },
   {
