differential merge probabilities of every seg. combination

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,23 +1327,26 @@
     "                      w, temperature=1):\n",
     "\n",
     "    p_val = torch.sigmoid((MInt(vi_idx, vi_val, vj_idx, vj_val)/w - 1) * temperature)\n",
-    "    p_idx = "
+    "\n",
+    "    p_vi_idx, p_vj_idx = np.meshgrid(vi_idx.numpy(), vj_idx.numpy(), indexing='ij')\n",
+    "    p_idx = torch.tensor(np.array([p_vi_idx.flatten(), p_vj_idx.flatten()]))\n",
+    "\n",
+    "    return p_idx, p_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[1.]], dtype=torch.float64, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[16105],\n",
+      "        [16104]])\n",
+      "tensor([[1.]], dtype=torch.float64, grad_fn=<SigmoidBackward0>)\n"
+     ]
     }
    ],
    "source": [
@@ -1358,15 +1361,16 @@
     "vi_val.requires_grad = True \n",
     "vj_val.requires_grad = True \n",
     "\n",
-    "smu = MInt(vi_idx, vi_val, vj_idx, vj_val)\n",
-    "temperature = 8\n",
-    "prob = torch.sigmoid((smu/w - 1) * temperature)\n",
-    "prob"
+    "p_idx, p_val = merge_probability(vi_idx, vi_val, \n",
+    "                                 vj_idx, vj_val, \n",
+    "                                 w, temperature=10)\n",
+    "print(p_idx)\n",
+    "print(p_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1375,29 +1379,22 @@
      "text": [
       "tensor([[1., 1.],\n",
       "        [2., 2.],\n",
-      "        [3., 3.]], grad_fn=<MmBackward0>) tensor([[-1.,  4.],\n",
-      "        [-1.,  4.],\n",
-      "        [-1.,  4.]], grad_fn=<MmBackward0>)\n"
+      "        [3., 3.]], grad_fn=<MmBackward0>) tensor([[1.5000, 2.5000],\n",
+      "        [1.5000, 2.5000],\n",
+      "        [1.5000, 2.5000]], grad_fn=<MmBackward0>)\n",
+      "tensor([[0.9999, 1.0000],\n",
+      "        [1.4999, 1.9999],\n",
+      "        [1.5000, 2.4999]], grad_fn=<DivBackward0>)\n",
+      "tensor([0.9999, 1.0000, 1.4999, 1.9999, 1.5000, 2.4999],\n",
+      "       grad_fn=<ViewBackward0>)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.0000,  1.0000],\n",
-       "        [-1.0000,  2.0000],\n",
-       "        [-1.0000,  2.9999]], grad_fn=<DivBackward0>)"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Differentiable min of permutation of all values\n",
     "\n",
     "A = torch.tensor([[1., 2., 3.]], requires_grad=True).T\n",
-    "B = torch.tensor([[-1., 4.]], requires_grad=True)\n",
+    "B = torch.tensor([[1.5, 2.5]], requires_grad=True)\n",
     "\n",
     "id_A = torch.ones((1, B.shape[1]), requires_grad=False)\n",
     "A = A @ id_A\n",
@@ -1407,7 +1404,40 @@
     "\n",
     "m = 0.015\n",
     "A, B = -A, -B\n",
-    "-(A + B + torch.sqrt((A - B)**2 + m**2))/2 # Smooth Maximum Unit\n"
+    "smu = -(A + B + torch.sqrt((A - B)**2 + m**2))/2 # Smooth Maximum Unit\n",
+    "print(smu)\n",
+    "\n",
+    "print(smu.flatten())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([2, 6]),\n",
+       " tensor([[1, 1, 2, 2, 3, 3],\n",
+       "         [4, 5, 4, 5, 4, 5]]))"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = torch.tensor(np.array([1,2,3], dtype=np.int64))\n",
+    "B = torch.tensor(np.array([4,5], dtype=np.int64))\n",
+    "\n",
+    "Aa, Bb = np.meshgrid(A.numpy(), B.numpy(), indexing='ij')\n",
+    "Aa = Aa.flatten()\n",
+    "Bb = Bb.flatten()\n",
+    "\n",
+    "idx = torch.tensor(np.array([Aa.flatten(), Bb.flatten()], dtype=np.int64))\n",
+    "idx.shape, idx"
    ]
   },
   {
