convert merge_probability() to use torch sparse_coo tensor layout

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -1086,6 +1086,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S = torch.sparse_coo_tensor(S_idx, S_val, (n,n)).coalesce()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -1158,20 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_segments(vi, S_idx, S_val):\n",
-    "    indices = S_idx[0,:] == vi\n",
-    "    vi_idx = S_idx[1, indices]\n",
-    "    vi_val = S_val[indices]\n",
-    "    return vi_idx, vi_val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1181,13 +1177,43 @@
        " tensor([1.], device='cuda:0', dtype=torch.float64))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def get_segments(vi:int, S_idx:torch.Tensor, S_val:torch.Tensor):\n",
+    "    indices = S_idx[0,:] == vi\n",
+    "    vi_idx = S_idx[1, indices]\n",
+    "    vi_val = S_val[indices]\n",
+    "    return vi_idx, vi_val\n",
     "get_segments(9, S_idx, S_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[9]]),\n",
+       "       values=tensor([1.]),\n",
+       "       device='cuda:0', size=(16384,), nnz=1, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_segments(vi:int, S:torch.Tensor):\n",
+    "   return  S.select(0, vi)\n",
+    "get_segments(9, S)"
    ]
   },
   {
@@ -1484,54 +1510,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tau(v_idx, k=300):\n",
     "    return k/segment_size[v_idx]\n",
     "\n",
-    "def MInt(vi_idx:torch.LongTensor, vi_val:torch.Tensor,\n",
-    "         vj_idx:torch.LongTensor, vj_val:torch.Tensor,\n",
+    "def MInt(Vi:torch.Tensor,\n",
+    "         Vj:torch.Tensor,\n",
     "         mu:float = 0.025) -> tuple[torch.Tensor, torch.Tensor]: \n",
-    "    vi_val = (I[vi_idx] + tau(vi_idx)) * vi_val \n",
-    "    vj_val = (I[vj_idx] + tau(vj_idx)) * vj_val \n",
+    "    Vi_idx, Vj_idx = Vi.indices().flatten(), Vj.indices().flatten()\n",
+    "    Vi_val = (I[Vi_idx] + tau(Vi_idx)) * Vi.values()\n",
+    "    Vj_val = (I[Vj_idx] + tau(Vj_idx)) * Vj.values()\n",
     "\n",
-    "    vi_val = vi_val.unsqueeze(dim=1)\n",
-    "    vj_val = vj_val.unsqueeze(dim=0)\n",
+    "    Vi_val = Vi_val.unsqueeze(dim=1)\n",
+    "    Vj_val = Vj_val.unsqueeze(dim=0)\n",
     "\n",
-    "    vi_val = -(vi_val @ torch.ones_like(vj_val))\n",
-    "    vj_val = -(torch.ones_like(vi_val) @ vj_val)\n",
+    "    Vi_val = -(Vi_val @ torch.ones_like(Vj_val))\n",
+    "    Vj_val = -(torch.ones_like(Vi_val) @ Vj_val)\n",
     "\n",
     "    # Smooth Maximum Unit\n",
-    "    smu = -(vi_val + vj_val + torch.sqrt((vi_val - vj_val)**2 + mu**2))/2 \n",
+    "    smu = -(Vi_val + Vj_val + torch.sqrt((Vi_val - Vj_val)**2 + mu**2))/2 \n",
     "    return smu \n",
     "\n",
-    "def merge_probability(vi_idx:torch.LongTensor, vi_val:torch.Tensor,\n",
-    "                      vj_idx:torch.LongTensor, vj_val:torch.Tensor, \n",
+    "def merge_probability(Vi:torch.Tensor,\n",
+    "                      Vj:torch.Tensor, \n",
     "                      w, temperature=1):\n",
     "\n",
-    "    p_val = torch.sigmoid((MInt(vi_idx, vi_val, vj_idx, vj_val)/w - 1) * temperature)\n",
+    "    p_val = torch.sigmoid((MInt(Vi, Vj)/w - 1) * temperature).flatten()\n",
     "\n",
-    "    p_vi_idx, p_vj_idx = np.meshgrid(vi_idx.numpy(), vj_idx.numpy(), indexing='ij')\n",
-    "    p_idx = torch.tensor(np.array([p_vi_idx.flatten(), p_vj_idx.flatten()]))\n",
+    "    p_vi_idx, p_vj_idx = torch.meshgrid(Vi.indices().flatten(), Vj.indices().flatten(), indexing='ij')\n",
+    "    p_idx = torch.stack([p_vi_idx.flatten(), p_vj_idx.flatten()])\n",
     "\n",
-    "    return p_idx, p_val"
+    "    return torch.sparse_coo_tensor(p_idx, p_val, (n,n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[16105],\n",
-      "        [16104]])\n",
-      "tensor([[1.]], dtype=torch.float64, grad_fn=<SigmoidBackward0>)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[7913],\n",
+       "                       [7912]]),\n",
+       "       values=tensor([1.]),\n",
+       "       device='cuda:0', size=(16384, 16384), nnz=1, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo,\n",
+       "       grad_fn=<SparseCooTensorWithDimsAndTensorsBackward0>)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1540,17 +1573,17 @@
     "vi, vj = g.edge_index[:,edge_queue[0]]\n",
     "w = edge_weights[edge_queue[0]]\n",
     "\n",
-    "vi_idx, vi_val = get_segments(vi, S_idx, S_val)\n",
-    "vj_idx, vj_val = get_segments(vj, S_idx, S_val)\n",
+    "# vi_idx, vi_val = get_segments(vi, S_idx, S_val)\n",
+    "# vj_idx, vj_val = get_segments(vj, S_idx, S_val)\n",
     "\n",
-    "vi_val.requires_grad = True \n",
-    "vj_val.requires_grad = True \n",
+    "Vi = get_segments(vi, S)\n",
+    "Vj = get_segments(vj, S)\n",
     "\n",
-    "p_idx, p_val = merge_probability(vi_idx, vi_val, \n",
-    "                                 vj_idx, vj_val, \n",
-    "                                 w, temperature=10)\n",
-    "print(p_idx)\n",
-    "print(p_val)"
+    "Vi.requires_grad = True \n",
+    "Vj.requires_grad = True \n",
+    "\n",
+    "P = merge_probability(Vi, Vj, w, temperature=8)\n",
+    "P"
    ]
   },
   {
